# Halide-Android-Sample

./: .editorconfig  README.md  build.gradle.kts  settings.gradle.kts
app/features/processing/: build.gradle.kts
app/features/processing/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/features/processing/src/main/cpp/halide/: CMakeLists.txt  build-debug.sh  build-release.sh  invert_generator.cpp
app/features/processing/src/main/java/com/samuelunknown/app/features/processing/: GetBitmapUseCase.kt  InvertBitmapUseCase.kt
app/sample/: build.gradle.kts
app/sample/src/main/: AndroidManifest.xml
app/sample/src/main/java/com/samuelunknown/app/sample/: MainActivity.kt  MainViewModel.kt
app/sample/src/main/java/com/samuelunknown/app/sample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/sample/src/main/java/com/samuelunknown/halide_android_sample/: MainActivity.kt
app/sample/src/main/java/com/samuelunknown/halide_android_sample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/sample/src/main/res/values/: strings.xml  themes.xml
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationComposeConventionPlugin.kt  AndroidApplicationConventionPlugin.kt  AndroidLibraryComposeConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  SampleGradlePlugin.kt
build-logic/convention/src/main/kotlin/com/samuelunknown/halide_android_sample/: AndroidCompose.kt  Constants.kt  KotlinAndroid.kt
build-logic/convention/src/main/kotlin/com/samuelunknown/halide_android_sample/tasks/: ShellScriptTask.kt
build-logic/gradle/wrapper/: gradle-wrapper.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
